--- a/server/views/layouts/default.jade
+++ b/server/views/layouts/default.jade
@@ -3,7 +3,10 @@ html
   head
     title= title
     block css
-        link(rel='stylesheet', href='/css/app.min.css')
+      link(rel='stylesheet', href='/css/app.min.css')
+      link(rel='stylesheet', href='/css/bootstrap.css')
+      link(rel='stylesheet', href='/css/font-awesome.css')
     block js
+      script(src='/js/bootstrap.min.js')
   body
     block content
